# helixgen-tui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.ralphex/: config
docs/: BACKLOG.md
docs/plans/: 2026-07-18-12-markup-safety.md  2026-07-18-signal-flow-editor.md  2026-07-18-tui-polish.md  2026-07-19-fuzzy-search-everywhere.md  TEMPLATE.md
docs/plans/completed/: 2026-07-18-12-markup-safety.md  2026-07-18-signal-flow-editor.md  2026-07-19-fuzzy-search-everywhere.md
docs/superpowers/plans/: 2026-07-17-tui-v1-librarian.md  core-api-notes.md
docs/superpowers/specs/: 2026-07-17-tui-v1-librarian-design.md  2026-07-18-signal-flow-editor-design.md  2026-07-18-tone-param-editor-v1-design.md  2026-07-19-fuzzy-search-everywhere-design.md
src/helixgen_tui/: __init__.py  __main__.py  app.py  fuzzy.py
src/helixgen_tui/core/: __init__.py  device.py  editor.py  library.py  models.py  ports.py  real.py  setlists.py
src/helixgen_tui/screens/: __init__.py  base.py  device.py  filterable.py  irs.py  library.py  setlists.py  tone_editor.py
src/helixgen_tui/widgets/: __init__.py  block_picker_modal.py  confirm_modal.py  help_overlay.py  status_footer.py  tab_strip.py
tests/: conftest.py  fake_core.py  test_boundaries.py  test_eager_boot.py  test_fuzzy.py  test_key_hints.py  test_package.py  test_shell.py
tests/core/: conftest.py  test_device_service.py  test_editor.py  test_library.py  test_models.py  test_real_core.py  test_setlists.py
tests/screens/: test_device.py  test_irs.py  test_library.py  test_setlists.py  test_tone_editor.py
tests/widgets/: test_confirm_modal.py
