[project]
name = "helixgen-tui"
version = "0.1.0.dev0"
description = "Terminal UI for helixgen: tone library, setlists, and Line 6 Helix Stadium device control."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mike Shea"},
]
keywords = ["line6", "helix", "guitar", "preset", "tone", "tui", "terminal"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "helixgen[device]>=0.26",
    "textual>=8,<9",
]

[project.urls]
Homepage = "https://github.com/sheax0r/helixgen-tui"
Repository = "https://github.com/sheax0r/helixgen-tui"
Issues = "https://github.com/sheax0r/helixgen-tui/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
helixgen-tui = "helixgen_tui.__main__:main"
hxg = "helixgen_tui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["helixgen_tui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# The Task 1 brief specifies test_shell.py verbatim; some tests bind
# `pilot` from `run_test()` without using it, which trips F841.
"tests/*" = ["F841"]
